Test Org - Speridian/src/objects/BA_Product_Flat__c.object
<CustomObject>
    <fields>
        <fullName>Acturial_Value__c</fullName>
        <label>Acturial Value</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Ancilliary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_BasePackageId__c</fullName>
        <label>Base Package Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_BasePackageName__c</fullName>
        <label>Base Package Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_BusinessPackageId__c</fullName>
        <label>Business Package Id</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Predefined_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExchangeValue__c</fullName>
        <label>Exchange Value</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                </value>
                <value>
                    <fullName>On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_LastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Predefined_Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_LastUpdatedDate__c</fullName>
        <label>Updated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_PackageCloseDate__c</fullName>
        <label>Package Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_PackageCode__c</fullName>
        <label>Package Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_PackageEffectiveDate__c</fullName>
        <label>Package Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_PackageId__c</fullName>
        <label>Package Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_PackageName__c</fullName>
        <label>Package Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_PackageTerminationDate__c</fullName>
        <label>Package Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_PlanCycle__c</fullName>
        <label>Plan Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ProductLine__c</fullName>
        <label>Product Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_RateFactor__c</fullName>
        <label>Rate Factor</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Predefined Packages</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Predefined Packages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Predefined Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>